--- a/landing-4/scss/style.scss
+++ b/landing-4/scss/style.scss
@@ -252,11 +252,16 @@ a {
 .home {
   padding-bottom: 100px;
   padding-top: 50px;
+  overflow: hidden;
 
   &__img {
     margin-top: auto;
     padding-top: 40px;
     text-align: center;
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   .container {
